--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -2,3 +2,10 @@
   background-color: var(--fac-highlight-background) !important;
   color: var(--fac-highlight-color) !important;
 }
+
+.button-row {
+  display: flex;
+  &.right {
+    justify-content: flex-end;
+  }
+}
