--- a/src/app/pages/commands/timer/timer.component.html
+++ b/src/app/pages/commands/timer/timer.component.html
@@ -102,6 +102,7 @@
 
           @if (showDebug) {
             <div>
+              <h3>Form Value</h3>
               <pre>{{ form.value | json }}</pre>
             </div>
           }
