--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import '_base.scss';
-@import '_overrides.scss';
-@import '_vars.scss';
-@import '_custom.scss';
+@use '_base.scss';
+@use '_overrides.scss';
+@use '_vars.scss';
+@use '_custom.scss';
