--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,40 +1,38 @@
 // Theming for m3: https://angular-material.dev/articles/angular-material-3
-
 @use '@angular/material' as mat;
-@include mat.core();
+@use 'theme' as theme;
 
-$light-theme: mat.m2-define-light-theme(
-  (
-    color: (
-      primary: mat.m2-define-palette(mat.$m2-green-palette),
-      accent: mat.m2-define-palette(mat.$m2-deep-purple-palette, A200, A100, A400),
-      warn: mat.m2-define-palette(mat.$m2-red-palette),
+html, body {
+  color-scheme: dark;
+  @include mat.theme((
+    color: mat.$green-palette,
+    //typography: Roboto,
+    typography: (
+      plain-family: Roboto,
+      //brand-family: "Open Sans",
+      bold-weight: 700,
+      medium-weight: 500,
+      regular-weight: 300,
     ),
-    typography: mat.m2-define-typography-config(),
-    density: 0,
-  )
-);
-$dark-theme: mat.m2-define-dark-theme(
-  (
-    color: (
-      primary: mat.m2-define-palette(mat.$m2-light-green-palette),
-      accent: mat.m2-define-palette(mat.$m2-deep-purple-palette, A200, A100, A400),
-      warn: mat.m2-define-palette(mat.$m2-red-palette),
-    ),
-    typography: mat.m2-define-typography-config(),
-    density: 0,
-  )
-);
+    density: 0
+  ));
 
-@include mat.all-component-themes($dark-theme);
+  @include mat.color-variants-backwards-compatibility(mat.define-theme());
+
+  @media (prefers-contrast: more) {
+    @include theme.high-contrast-overrides(light);
+  }
+
+  & {
+    height: 100%;
+    background-color: var(--mat-sys-surface);
+    color: var(--mat-sys-on-surface);
+    //background-color: black;
+  }
+}
 
 * {
   box-sizing: border-box;
-}
-
-html,
-body {
-  height: 100%;
 }
 
 body {
@@ -47,16 +45,12 @@ body {
     flex-direction: column;
     min-height: 100vh; /* Ensure the container takes the full viewport height */
   }
-
-  &.alt-theme {
-    @include mat.all-component-colors($light-theme);
-  }
 }
 
 .syntax-code {
-  color: mat.m2-get-color-from-palette(mat.$m2-green-palette, 500);
+  color: var(--mat-sys-on-primary-container);
 }
 
 a {
-  color: mat.m2-get-color-from-palette(mat.$m2-green-palette, 500);
+  color: var(--mat-sys-primary);
 }
