fixed slide toggle theme

--- a/src/app/pages/debug/debug.component.html
+++ b/src/app/pages/debug/debug.component.html
@@ -145,3 +145,9 @@
   <p>Code: <code>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</code></p>
   <p>Syntax Code: <code class="syntax-code">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</code></p>
 </div>
+<mat-divider></mat-divider>
+<div>
+  <mat-slide-toggle>
+    <span>A slide toggle with text</span>
+  </mat-slide-toggle>
+</div>
