--- a/src/app/pages/debug/debug.component.html
+++ b/src/app/pages/debug/debug.component.html
@@ -135,3 +135,19 @@
     </div>
   </section>
 </div>
+<mat-divider></mat-divider>
+<div>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi voluptates odit officiis reiciendis, nostrum
+    impedit consequuntur perspiciatis pariatur deserunt at beatae hic placeat culpa, recusandae, dolorem atque ex?
+    Ducimus, debitis! <a href="#">Link to source</a>
+  </p>
+  <p>Code: <code>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</code></p>
+  <p>Syntax Code: <code class="syntax-code">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</code></p>
+</div>
+<mat-divider></mat-divider>
+<div>
+  <mat-slide-toggle>
+    <span>A slide toggle with text</span>
+  </mat-slide-toggle>
+</div>
