added support for `sendAsReply` flag
Resolves: https://github.com/rGunti/FloppyBot/issues/316

--- a/src/app/components/custom-command-response-form/custom-command-response-form.component.html
+++ b/src/app/components/custom-command-response-form/custom-command-response-form.component.html
@@ -33,4 +33,8 @@
     <input type="hidden" formControlName="content" />
     <input type="hidden" formControlName="auxiliaryContent" />
   }
+  <mat-slide-toggle formControlName="sendAsReply">
+    <b>Send response message as a reply</b><br />
+    When enabled, this will either generate a direct reply message or mention the requesting user.
+  </mat-slide-toggle>
 </div>
