--- a/src/app/components/command-list/command-list.component.html
+++ b/src/app/components/command-list/command-list.component.html
@@ -4,11 +4,16 @@
     <ng-icon name="bootstrapFilter"></ng-icon>
   </mat-icon>
   <input matInput [(ngModel)]="dataSource.filter" />
+  <button mat-icon-button matSuffix (click)="dataSource.filter = ''" matTooltip="Clear filter">
+    <mat-icon>
+      <ng-icon name="bootstrapX"></ng-icon>
+    </mat-icon>
+  </button>
 </mat-form-field>
 
 <mat-paginator [pageSize]="10" hidePageSize="true" showFirstLastButtons></mat-paginator>
 
-<table mat-table [dataSource]="dataSource" matSort>
+<table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc">
   <ng-container matColumnDef="enabled">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Enabled</th>
     <td mat-cell *matCellDef="let command">
