--- a/src/app/components/command-list/command-list.component.html
+++ b/src/app/components/command-list/command-list.component.html
@@ -1,6 +1,19 @@
+<mat-form-field class="filter">
+  <mat-label>Filter</mat-label>
+  <mat-icon matPrefix>
+    <ng-icon name="bootstrapFilter"></ng-icon>
+  </mat-icon>
+  <input matInput [(ngModel)]="dataSource.filter" />
+  <button mat-icon-button matSuffix (click)="dataSource.filter = ''" matTooltip="Clear filter">
+    <mat-icon>
+      <ng-icon name="bootstrapX"></ng-icon>
+    </mat-icon>
+  </button>
+</mat-form-field>
+
 <mat-paginator [pageSize]="10" hidePageSize="true" showFirstLastButtons></mat-paginator>
 
-<table mat-table [dataSource]="dataSource" matSort>
+<table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc">
   <ng-container matColumnDef="enabled">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Enabled</th>
     <td mat-cell *matCellDef="let command">
@@ -65,6 +78,10 @@
       }
     </td>
   </ng-container>
+
+  <tr *matNoDataRow>
+    <td colspan="10" class="empty-text">Couldn't find any commands matching your filter.</td>
+  </tr>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
