can now link twitch accounts to channels

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -195,6 +195,14 @@
       >
         Channel Aliases
       </button>
+      <button
+        mat-menu-item
+        routerLink="/settings/account-links"
+        routerLinkActive="mat-mdc-menu-item-highlighted"
+        queryParamsHandling="merge"
+      >
+        Accounts
+      </button>
     </mat-menu>
 
     <mat-menu #mAdmin="matMenu">
