--- a/src/app/pages/settings/account-links-confirm/account-links-confirm.component.html
+++ b/src/app/pages/settings/account-links-confirm/account-links-confirm.component.html
@@ -1,15 +1,3 @@
-@if (hasError$ | async) {
-  <mat-card>
-    <mat-card-title>Connection failed!</mat-card-title>
-    <mat-card-content>
-      <p>
-        The connection to your Twitch account has failed. You may attempt again, if you want to. If the problem
-        persists, contact support.
-      </p>
-    </mat-card-content>
-  </mat-card>
-} @else {}
-
 @if (status$ | async; as status) {
   <mat-card>
     <mat-card-title>{{ status.title }}</mat-card-title>
@@ -21,12 +9,9 @@
             <mat-spinner></mat-spinner>
           }
           @case ('Error') {
-            <ng-container>
-              <mat-icon class="response-icon">
-                <ng-icon name="bootstrapExclamationTriangle"></ng-icon>
-              </mat-icon>
-              <button mat-button routerLink="/settings/account-links">Go back to Account Links</button>
-            </ng-container>
+            <mat-icon class="response-icon">
+              <ng-icon name="bootstrapExclamationTriangle"></ng-icon>
+            </mat-icon>
           }
           @case ('Success') {
             <mat-icon class="response-icon">
@@ -37,6 +22,10 @@
         <span class="spacer"></span>
       </div>
       <p>{{ status.description }}</p>
+
+      @if (status.status === 'Error' || status.status === 'Success') {
+        <button mat-button routerLink="/settings/account-links">Go back to Account Links</button>
+      }
     </mat-card-content>
   </mat-card>
 }
