--- a/src/app/pages/admin/audit/audit.component.html
+++ b/src/app/pages/admin/audit/audit.component.html
@@ -22,7 +22,9 @@
     </mat-card-header>
     <mat-card-content>
       <mat-paginator [pageSize]="50" [pageSizeOptions]="[10, 50, 100]" showFirstLastButtons></mat-paginator>
-      <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+      @if (loading$ | async) {
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      }
 
       <table mat-table matSort [dataSource]="dataSource">
         <ng-container matColumnDef="timestamp">
