feat: created new screen to display channel rewards

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -183,6 +183,18 @@
           </mat-icon>
           Custom Commands
         </button>
+
+        <button
+          mat-menu-item
+          routerLink="/commands/twitch-rewards"
+          routerLinkActive="mat-mdc-menu-item-highlighted"
+          queryParamsHandling="merge"
+        >
+          <mat-icon>
+            <ng-icon name="bootstrapCoin"></ng-icon>
+          </mat-icon>
+          Channel Rewards
+        </button>
       }
     </mat-menu>
 
