feat: can now filter files

--- a/src/app/components/custom-command-response-form/custom-command-response-form.component.html
+++ b/src/app/components/custom-command-response-form/custom-command-response-form.component.html
@@ -11,6 +11,7 @@
     <fac-file-picker
       label="Sound file to play"
       [restrictToChannel]="channelId!"
+      [restrictToTypes]="['audio/*']"
       formControlName="content"
     ></fac-file-picker>
     <mat-form-field>
