--- a/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
+++ b/src/app/dialogs/custom-command-editor-dialog/custom-command-editor-dialog.component.html
@@ -19,7 +19,7 @@
         <mat-icon matPrefix>
           <ng-icon name="bootstrapExclamationLg"></ng-icon>
         </mat-icon>
-        <input matInput formControlName="name" [readonly]="!!command.id" />
+        <input matInput formControlName="name" class="code" [readonly]="!!command.id" />
         <mat-hint>
           This is the name of your command. Use only lowercase letters and numbers. Cannot contain spaces.
         </mat-hint>
